<resources>
    <string name="app_name">Notes books</string>
    <string name="Add">Add</string>
    <string name="empty">Empty</string>
    <string name="title_activity_edit">EditActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save">save</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="image">image</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edittext">EditText</string>
</resources>