<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_bg"
    tools:context=".EditActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/edit_text_color_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImageLayout" />

    <EditText
        android:id="@+id/edDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textMultiLine|textPersonName"
        android:padding="10dp"
        android:textColor="@color/edit_text_color_state"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edTitle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edTitle"
        app:layout_constraintTop_toBottomOf="@+id/edTitle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/save"
        app:backgroundTint="@color/blue_dark"
        app:layout_constraintBottom_toBottomOf="@+id/edDescription"
        app:layout_constraintEnd_toEndOf="@+id/edDescription"
        app:srcCompat="@drawable/ic_save"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/image"
        app:backgroundTint="@color/blue_dark"
        app:layout_constraintBottom_toTopOf="@+id/fbSave"
        app:layout_constraintEnd_toEndOf="@+id/fbSave"
        app:layout_constraintStart_toStartOf="@+id/fbSave"
        app:srcCompat="@drawable/ic_image"
        app:tint="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainImageLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/edTitle"
        app:layout_constraintStart_toStartOf="@+id/edTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/ibEdit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit" />

        <ImageButton
            android:id="@+id/ibDelete"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/edittext"
        app:backgroundTint="@color/blue_dark"
        app:layout_constraintBottom_toTopOf="@+id/fbSave"
        app:layout_constraintEnd_toEndOf="@+id/fbSave"
        app:layout_constraintStart_toStartOf="@+id/fbSave"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>